# SGEDashboardJuly

./: .env  .env.example  .envV2  .gitignore  AUSTRALIAN_GRANTS_SCRAPER.md  AUSTRALIAN_GRANTS_SCRAPER_INTEGRATION.md  BASELINE_STATUS.md  CSP_FIX_SOLUTION.md  DEPLOYMENT_BUILD_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_WORKFLOW.md  FIXES.md  Grant_Scraper_System_Report.md  LICENSE  Makefile  NAVIMPACT_BASELINE.md  NAVIMPACT_BRANDING_GUIDE.md  NAVIMPACT_BRANDING_REPORT.md  PHASE1_BASELINE.md  PHASE2_STEP1_BASELINE.md  README.deploy.md  README.dev.md  README.md  RENDER_DEPLOYMENT.md  SECURITY_HARDENING.md  SETUP_GUIDE.md  SGE_CLEANUP_SUMMARY.md  alembic.ini  api-usage-analysis.md  app.db  env.production.template  frontend_consistency_fixes.md  frontend_issues_analysis.md  frontend_issues_analysis_priority.md  grant_system_enhancements.md  integration_issues_analysis.md  integration_testing_guide.md  main.py  next.config.ts  pyproject.toml  (+8 more)
SGE_Dashboard_Scaffold/backend/: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt  setup.py  test.db
SGE_Dashboard_Scaffold/backend/alembic/: env.py
SGE_Dashboard_Scaffold/backend/app/: __init__.py  main.py
SGE_Dashboard_Scaffold/backend/app/core/: config.py  logging.py  security.py
SGE_Dashboard_Scaffold/backend/app/db/: base.py  base_class.py  base_model.py  create_tables.py  init_db.py  session.py
SGE_Dashboard_Scaffold/backend/app/models/: __init__.py  grant.py  metric.py  project.py  (+3 more)
SGE_Dashboard_Scaffold/backend/tests/: conftest.py  test_grants.py  test_main.py  test_metrics.py  test_program_logic.py
(+346 files in other folders)
