[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sge-dashboard"
version = "0.1.0"
authors = [
    { name="Shadow Goose Entertainment", email="example@example.com" },
]
description = "Backend API for Shadow Goose Entertainment Dashboard"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
] 